# rust-vote-api

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/db/: db.rs  vote.db
src/migration/: init.sql
src/models/: category.rs  item.rs
src/services/: category.rs  mod.rs  vote.rs
