[package]
name = "vote-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = "1.0.219"
env_logger = "0.11.8"
log = "0.4"